
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llava-vision-question-ops"
version = "0.1.0"
description = "Build a multimodal reasoning surface for visual question answering, evidence review, and production-style image understanding demos."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
